--- a/styles/_signup.scss
+++ b/styles/_signup.scss
@@ -27,7 +27,7 @@
   display: block;
   width: 100%;
   padding: 12px;
-  margin-top: 36px;
+  margin-top: 12px;
   text-align: center;
   font-size: 1.6em;
   border: 1px solid $text-muted;
